app/scss/gallery.scss
.gallery-thumbnails {
	list-style: none;
	padding: 0;
	overflow: scroll hidden;
	display: flex;
	gap: 0.5rem;
	margin: 0 0 -0.5rem 0;
	padding: 0.5rem 0 0.5rem 0;
	flex-direction: row;

	li, li a {
		list-style: none;
		margin: 0;
		padding: 0;
	}

	li {
		display: block;
		vertical-: middle;
		margin: 0;
		padding: 0;

		a {
			display: block;
			text-decoration: none;

			&:hover {
				text-decoration: none;
			}
		}
	}

	.gallery-image {
		position: relative;
		transition: border-color 0.15s ease-in-out;
		border: 2px solid #fff0;
		overflow: hidden;

		&:hover img {
			filter: brightness(1.1);
		}

		&.active {
			border-color: #fff9;
		}
	}

	img {
		width: 100px;
		height: 67px;
		object-fit: contain;
	}
}

.video-thumbnail {
	min-width: 100px;
	min-height: 67px;
	background: #111;
	position: relative;
	display: flex !important;
	flex-direction: column !important;
	align-items: center !important;
	justify-content: center !important;
	cursor: pointer;

	img {
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		object-fit: cover;
		z-index: 10;
	}

	.fa-play {
		display: block;
		font-size: 200%;
		color: #f44;
		z-index: 20;
	}

	&:hover {
		background: #191919;

		.fa-play {
			color: red;
		}
	}

	.label {
		position: absolute;
		top: 0.25rem;
		right: 0.5rem;
		color: #555;
		font-size: 80%;
		z-index: 30;
	}
}

.video-embed {
	background: #111;
	display: block;
	position: relative;
	cursor: pointer;

	.fa-play {
		display: block;
		font-size: 180%;
		color: white;
		z-index: 20;
		position: absolute;
		left: 50%;
		top: 50%;
		transform: translate(-50%, -50%);

		&.youtube {
			background: #ff0000;
			padding: 0.5em 1em;
			border-radius: 0.5em;
		}
	}

	img {
		filter: brightness(0.8);
	}

	&:hover {
		background: #191919;

		img {
			filter: brightness(1);
		}
	}

	.label {
		position: absolute;
		top: 0.25rem;
		right: 0.5rem;
		color: #555;
		font-size: 80%;
		z-index: 30;
	}
}

.screenshot-add {
	display: block !important;
	width: 200px;
	height: 133px;
	background: #444;
	color: #666;
	text-align: center;
	line-height: 133px !important;
	font-size: 80px;

	&:hover {
		background: #555;
		color: #999;
		text-decoration: none;
	}
}

